syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";


import "avenue/financial/protobuf/core/core_messages_description.proto";
import "avenue/financial/protobuf/recurringinvoicepayment/recurring_invoice_payment_messages_description.proto";



//Platform

option java_multiple_files = true;
option java_package = "com.avenue.financial.services.grpc.proto.recurringinvoicepayment";
option java_outer_classname = "RecurringInvoicePaymentServiceDescriptionProto";

package avenue.rms.protobuf.recurringinvoicepayment;

service RecurringInvoicePaymentServiceProto {

  rpc list (ListRecurringInvoicePaymentRequestProto) returns (ListRecurringInvoicePaymentResponseProto) {
  }

  rpc get (GetRecurringInvoicePaymentRequestProto) returns (GetRecurringInvoicePaymentResponseProto) {
  }


  rpc add (AddRecurringInvoicePaymentRequestProto) returns (AddRecurringInvoicePaymentResponseProto) {
  }

  rpc update (UpdateRecurringInvoicePaymentRequestProto) returns (UpdateRecurringInvoicePaymentResponseProto) {
  }

  rpc delete (DeleteRecurringInvoicePaymentRequestProto) returns (DeleteRecurringInvoicePaymentResponseProto) {
  }

}

message CountRecurringInvoicePaymentRequestProto {
  avenue.financial.protobuf.core.RequestParamProto param = 1;
  google.protobuf.StringValue search = 2;
  avenue.financial.protobuf.core.RequestContextProto request_context = 3;
}


message CountRecurringInvoicePaymentResponseProto {
  int32 limit = 1;
  int32 page_number = 2;
  int32 pages_count = 3;
  int32 total_count = 4;
}

message ListRecurringInvoicePaymentResponseProto {
  repeated avenue.financial.protobuf.recurringinvoicepayment.RecurringInvoicePaymentProto data = 1;
}

message GetRecurringInvoicePaymentResponseProto {
  avenue.financial.protobuf.recurringinvoicepayment.RecurringInvoicePaymentProto data = 1;
}

message GetRecurringInvoicePaymentRequestProto {
  string id = 1;
  avenue.financial.protobuf.core.RequestParamProto param = 2;
  avenue.financial.protobuf.core.RequestContextProto request_context = 3;
}

message ListRecurringInvoicePaymentRequestProto {
  avenue.financial.protobuf.core.RequestParamProto param = 1;
  google.protobuf.StringValue search = 2;
  avenue.financial.protobuf.core.RequestContextProto request_context = 3;
}




message AddRecurringInvoicePaymentRequestProto {
  avenue.financial.protobuf.recurringinvoicepayment.AddRecurringInvoicePaymentProto data = 1;
  avenue.financial.protobuf.core.RequestContextProto request_context = 2;
}

message UpdateRecurringInvoicePaymentRequestProto {
  string id = 1;
  avenue.financial.protobuf.recurringinvoicepayment.UpdateRecurringInvoicePaymentProto data = 2;
  avenue.financial.protobuf.core.RequestContextProto request_context = 3;
}

message DeleteRecurringInvoicePaymentRequestProto {
  string id = 1;
  avenue.financial.protobuf.core.RequestContextProto request_context = 2;
}


message AddRecurringInvoicePaymentResponseProto {
  string id = 1;
  string action = 2;
  string message = 3;
  avenue.financial.protobuf.core.StatusTypeProto status = 4;
  avenue.financial.protobuf.recurringinvoicepayment.RecurringInvoicePaymentProto data = 5;
}

message UpdateRecurringInvoicePaymentResponseProto {
  string id = 1;
  string action = 2;
  string message = 3;
  avenue.financial.protobuf.core.StatusTypeProto status = 4;
  avenue.financial.protobuf.recurringinvoicepayment.RecurringInvoicePaymentProto data = 5;
}

message DeleteRecurringInvoicePaymentResponseProto {
  string id = 1;
  string action = 2;
  string message = 3;
  avenue.financial.protobuf.core.StatusTypeProto status = 4;
  avenue.financial.protobuf.recurringinvoicepayment.RecurringInvoicePaymentProto data = 5;
}








